# trail-lab

./: .gitignore  01_lire_donnees.ipynb  02_terrain.ipynb  03_cartographie.ipynb  README.md  build_slides.sh  pyproject.toml  trail_analysis_pub.py
archive/: gpx_race.py  race_predictor.py  trail_analysis.py  trail_analysis_pub.py  trail_analysis_v2.py  trail_report.py
articles/: 2025-08-01-anatomy-trail-race-fit-file.md  2025-09-25-gps-elevation-slope.md  2025-10-23-central-governor.md  2025-11-27-minetti-model.md  2025-12-18-grade-adjusted-pace.md  2026-01-22-trimp-fitness-fatigue.md  2026-02-26-race-physiology.md  trail_blog_publication_plan.md
notebooks/blog/: 03_physiologie.ipynb  04_minetti_model.ipynb  04_recup_meteo.ipynb
notebooks/research/: 09_weather.ipynb  race_predictor.ipynb  race_predictor_v2.ipynb  race_vs_theory.ipynb  rapport_course2slide.ipynb  trimp_coggan.ipynb
notebooks/research/actif/: fatigue_analysis.ipynb  race_compare.ipynb
notebooks/research/archive/: race_predictor_final.ipynb
notebooks/research/illustrations/: minetti_2002_polynomial.ipynb
